Email and Link Updates

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -66,17 +66,17 @@
 						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/coathook.jpg" alt="" />
 							<h3 class="title">Tesla Coat Hook</h3>
-							<p>A common complaint among Model S and Model X owners was that there is no built-in coat hook in either vehicle. During my internship I developed an aftermarket accessory that would be unobtrusive and easy to install. I owned the project in its entirety from initial design through working with suppliers for manufacturing.</p>
+							<p>A common complaint among Model S and Model X owners was that there is no built-in coat hook in either vehicle. During my internship I developed an aftermarket accessory that would be unobtrusive and easy to install. I owned the project in its entirety from initial design through working with suppliers for manufacturing. <a href="https://shop.tesla.com/us/en/product/vehicle-accessories/coat-hooks.html">See them in Tesla's online store!</a></p>
 						</section>
 						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/stride.jpg" alt="" />
 							<h3 class="title">2.009 - Stride</h3>
-							<p>Millions of people in the US need mobility aids for one reason or another. In order to finally reach these users and address their needs, we've developed a walker unlike any other. Stride is a walker that walks with you. It contains an integrated reverse braking system, meaning the brakes are always applied until a force is applied to the grips, signifying that the user is ready to start walking. Along with this system, Stride contains traditional brakes as well, making it easy to slow the walker when going down hill. Stride also includes a collapsible and customizable seat and storage area, all packaged into a sleek design which makes the user proud of their walker.</p>
+							<p>Millions of people in the US need mobility aids for one reason or another. In order to finally reach these users and address their needs, we've developed a walker unlike any other. Stride is a walker that walks with you. It contains an integrated reverse braking system, meaning the brakes are always applied until a force is applied to the grips, signifying that the user is ready to start walking. Along with this system, Stride contains traditional brakes as well, making it easy to slow the walker when going down hill. Stride also includes a collapsible and customizable seat and storage area, all packaged into a sleek design which makes the user proud of their walker. <a href="http://designed.mit.edu/new/view.html?year=2016&team=blue">Check out our process!</a></p>
 						</section>
 						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/doodle.jpg" alt="" />
-							<h3 class="title"><a href="https://vimeo.com/97063215">Doodle Bot</a></h3>
-							<p>In Design Across Scales we were asked to make something that makes something else. What I created was a robot that took drawings from your computer screen and translated them to paper. Drawing on the screen would generate a series of points, which would be fed into the Arduino controlled, marker carrying robot to act as your personal draftsman. Once again, the possibilities for further exploration are plentiful. Applying this idea to fields like 3D printing could allow rapid prototyping to leave the constraint of the printer bed.</p>
+							<h3 class="title">Doodle Bot</h3>
+							<p>In Design Across Scales we were asked to make something that makes something else. What I created was a robot that took drawings from your computer screen and translated them to paper. Drawing on the screen would generate a series of points, which would be fed into the Arduino controlled, marker carrying robot to act as your personal draftsman. Once again, the possibilities for further exploration are plentiful. Applying this idea to fields like 3D printing could allow rapid prototyping to leave the constraint of the printer bed. <a href="https://vimeo.com/97063215">See it in action!</a></p>
 						</section>
 						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/shelter.jpg" alt="" />
@@ -100,13 +100,13 @@
 						</section>
 						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/sfrender.jpg" alt="" />
-							<h3 class="title"><a href="http://fab.cba.mit.edu/classes/863.15/section.Architecture/people/Kawecki/index.html">How to Make (almost) Anything</a></h3>
-							<p>This class consisted of a ton of small weekly projects, culminating in a final which brought them all together. Throughout the class I made cardboard shelves, casted jewelry, designed a wooden desk, cut and built PCB's, created a drink mixing robot, and finally built a single module of a split-flap display. Check out my class page by clicking on the title above!</p>
+							<h3 class="title"><How to Make (almost) Anything</h3>
+							<p>This class consisted of a ton of small weekly projects, culminating in a final which brought them all together. Throughout the class I made cardboard shelves, casted jewelry, designed a wooden desk, cut and built PCB's, created a drink mixing robot, and finally built a single module of a split-flap display. Check out my class page by clicking on the title above! <a href="http://fab.cba.mit.edu/classes/863.15/section.Architecture/people/Kawecki/index.html">See my class page!</a></p>
 						</section>
 						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/tower.jpg" alt="" />
-							<h3 class="title"><a href="https://www.youtube.com/watch?v=93Wiev7npv4">Foldable Construction</a></h3>
-							<p>We set out with the goal of maximizing a dimension through simple means of construction. Using a CNC router, we prepared the sheet material before bringing it to the site, where it was merely folded and interlocked to achieve the complex sixteen foot tower seen. The possibilities for further exploration are endless, maximizing the utility of standard amounts of material, instant on-site construction, and modular building.</p>
+							<h3 class="title">Foldable Construction</h3>
+							<p>We set out with the goal of maximizing a dimension through simple means of construction. Using a CNC router, we prepared the sheet material before bringing it to the site, where it was merely folded and interlocked to achieve the complex sixteen foot tower seen. The possibilities for further exploration are endless, maximizing the utility of standard amounts of material, instant on-site construction, and modular building. <a href="https://www.youtube.com/watch?v=93Wiev7npv4">Watch us build it!</a></p>
 						</section>
 						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/sign.jpg" alt="" />
@@ -125,8 +125,8 @@
 						</section>
 						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/staggle.jpg" alt="" />
-							<h3 class="title"><a href="https://vimeo.com/95931335">sTAGgle</a></h3>
-							<p>After some exploration, this project led us back to the playground that we rememebered from our younger days. When asked to design a new way of play, we hadn't even considered the simplest version of the concept, the blacktop game. We all remember the games from when we were kids, four-square, hopscotch, and others that only required some chalk to get started. Following along that track we came up with sTAGgle, a multi-person playground game that is combines the fundamentals of games such as hopscotch, Twister, and of course, TAG!</p>
+							<h3 class="title">sTAGgle</h3>
+							<p>After some exploration, this project led us back to the playground that we rememebered from our younger days. When asked to design a new way of play, we hadn't even considered the simplest version of the concept, the blacktop game. We all remember the games from when we were kids, four-square, hopscotch, and others that only required some chalk to get started. Following along that track we came up with sTAGgle, a multi-person playground game that is combines the fundamentals of games such as hopscotch, Twister, and of course, TAG! <a href="https://vimeo.com/95931335">See it played!</a></p>
 						</section>
 						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/chevelle.jpg" alt="" />
@@ -149,7 +149,7 @@
 				<div class="container">
 					<ul class="copyright">
 					<li>Anthony Kawecki</li>
-					<li>anthony.ray.kawecki@gmail.com</li>
+					<li>anthony@kawecki.me</li>
 					<li>816.522.2210</li>
 					<li>Summer 2019</li>
 					</ul>
