--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 					</div>
 					<ul class="copyright">
 						<li>Anthony Kawecki</li>
-						<li>anthony.ray.kawecki@gmail.com</li>
+						<li>anthony@kawecki.me</li>
 						<li>816.522.2210</li>
 						<li>Summer 2019</li>
 					</ul>
