Update index.html. About Me.

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 					</header>
 					<div class="row 200%">
 						<section class="6u 12u$(small)">
-							<i class="icon big rounded fa-gear"></i>
-							<p>I'm a mechanical engineer. I've always been interested in mechanical design. My earliest memories are of my dad and I working in the garage, and I've been tinkering ever since.</p>
+							<i class="icon big rounded fa-pencil"></i>
+							<p>I'm an engineer and a designer. My earliest memories are of my dad and I working in the garage, and I've been tinkering ever since. I have experience with woodworking, metalworking, composites, and rapid prototyping. I'm always in the middle of building something.</p>
 						</section>
 						<section class="6u 12u$(small)">
-							<i class="icon big rounded fa-pencil"></i>
-							<p>I'm a designer. I'm interested in industrial design and architecture. I have experience with woodworking, metalworking, and composites, and I'm always building something.</p>
+							<i class="icon big rounded fa-building"></i>
+							<p>I'm obsessed with urban design and architecture. I'm interested in the effects the growing urban population and climate change are going to have on our built environment. I want to be a part of designing our cities and transportation systems for the challenges of the 21st century.</p>
 						</section>
 						<!--<section class="12u 12u$(small)">
 							<i class="icon big rounded fa-tree"></i>
