--- a/Portfolio.html
+++ b/Portfolio.html
@@ -64,71 +64,76 @@
 					</header>
 					<div class="row">
 						<section class="feature 6u 12u$(small)">
+							<img class="image fit" src="images/shark.jpg" alt="" />
+							<h3 class="title">Shark APEX UpLight</h3>
+							<p>We combined all of the advantages of a stick vacuum, with those of a traditional upright. The UpLight is lightweight and maneuverable, but is more powerful than any other stick on the market. The form factor is also unique, giving users the flexibility to clean their entire home with features like the standing upright lock, large DuoClean brush roll, and a liftaway pod with onboard hose. I created the first prototypes for this project and oversaw the development all the way through to production, creating form and functional prototypes along with CAD and simulations. <a href="https://direct.sharkclean.com/16/products/shark-apex-uplight-corded-lift-away-vacuum-lz601/17/microsite/ogviia/?_ga=2.101976897.1367647026.1572037049-1875178877.1523625082">See it in the store now!</a></p>
+						</section>
+						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/coathook.jpg" alt="" />
 							<h3 class="title">Tesla Coat Hook</h3>
 							<p>A common complaint among Model S and Model X owners was that there is no built-in coat hook in either vehicle. During my internship I developed an aftermarket accessory that would be unobtrusive and easy to install. I owned the project in its entirety from initial design through working with suppliers for manufacturing. <a href="https://shop.tesla.com/us/en/product/vehicle-accessories/coat-hooks.html">See them in Tesla's online store!</a></p>
 						</section>
-						<section class="feature 6u$ 12u$(small)">
+						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/stride.jpg" alt="" />
 							<h3 class="title">2.009 - Stride</h3>
 							<p>Millions of people in the US need mobility aids for one reason or another. In order to finally reach these users and address their needs, we've developed a walker unlike any other. Stride is a walker that walks with you. It contains an integrated reverse braking system, meaning the brakes are always applied until a force is applied to the grips, signifying that the user is ready to start walking. Along with this system, Stride contains traditional brakes as well, making it easy to slow the walker when going down hill. Stride also includes a collapsible and customizable seat and storage area, all packaged into a sleek design which makes the user proud of their walker. <a href="http://designed.mit.edu/new/view.html?year=2016&team=blue">Check out our process!</a></p>
 						</section>
-						<section class="feature 6u 12u$(small)">
+						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/doodle.jpg" alt="" />
 							<h3 class="title">Doodle Bot</h3>
 							<p>In Design Across Scales we were asked to make something that makes something else. What I created was a robot that took drawings from your computer screen and translated them to paper. Drawing on the screen would generate a series of points, which would be fed into the Arduino controlled, marker carrying robot to act as your personal draftsman. Once again, the possibilities for further exploration are plentiful. Applying this idea to fields like 3D printing could allow rapid prototyping to leave the constraint of the printer bed. <a href="https://vimeo.com/97063215">See it in action!</a></p>
 						</section>
-						<section class="feature 6u$ 12u$(small)">
+						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/shelter.jpg" alt="" />
 							<h3 class="title">Design of Shelter</h3>
 							<p>I designed this garage and showroom for a class in geometric design. Using Rhino, I modeled the shelter and seating, then brought them into 3ds Max for rendering. From here I explored the world of rapid prototyping by 3D printing the shelter and using Grasshopper to control a 5-axis Kuka arm to mill a foam model of the external shelter.</p>
 						</section>
-						<section class="feature 6u 12u$(small)">
+						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/pokeball.jpg" alt="" />
 							<h3 class="title">2.008</h3>
 							<p>In Design and Manufacturing II teams design and produce 50 yo-yos, covering the details of design for manufacturing. We created a Pokeball Yo-Yo! Each half consists of a large base with embeded steel ring for weight, then a top, bottom, and center ring piece. These snap into posts in the base and interface with one another for stability. The height of the posts ensures the pieces aren't over-constrained. Sitting in the middle of the front face is a thermoformed button held in place by two thinner pegs in the base, making it clickable as well!</p>
 						</section>
-						<section class="feature 6u$ 12u$(small)">
+						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/212.jpg" alt="" />
 							<h3 class="title">2.12</h3>
 							<p>In Introduction to Robotics, we designed robots to help hemiplegic patients around their homes. The task of this robot arm was to assist in opening a drawer, then hold a towel and help the person wrap it around their body. I designed a simple two-link arm to accomplish these tasks. The arm was then mounted onto a serial elastic actuator, whose compliance between components ensured safety when interacting with the user. The arm was controlled by voice command and an inertial measurement unit attached to the users arm.</p>
 						</section>
-						<section class="feature 6u 12u$(small)">
+						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/2007.jpg" alt="" />
 							<h3 class="title">2.007</h3>
 							<p>My design for the competition was a simple one, in order to rack up points in the quickest ways possible. The car would drive up the course and use the swinging arm to achieve the highest valued objectives in the game. The three wheeled design inspired the Reliant Robin shell, decorated with the Martini Racing livery because who wouldn't want to rally in a Reliant?</p>
 						</section>
-						<section class="feature 6u$ 12u$(small)">
+						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/sfrender.jpg" alt="" />
 							<h3 class="title"><How to Make (almost) Anything</h3>
 							<p>This class consisted of a ton of small weekly projects, culminating in a final which brought them all together. Throughout the class I made cardboard shelves, casted jewelry, designed a wooden desk, cut and built PCB's, created a drink mixing robot, and finally built a single module of a split-flap display. Check out my class page by clicking on the title above! <a href="http://fab.cba.mit.edu/classes/863.15/section.Architecture/people/Kawecki/index.html">See my class page!</a></p>
 						</section>
-						<section class="feature 6u 12u$(small)">
+						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/tower.jpg" alt="" />
 							<h3 class="title">Foldable Construction</h3>
 							<p>We set out with the goal of maximizing a dimension through simple means of construction. Using a CNC router, we prepared the sheet material before bringing it to the site, where it was merely folded and interlocked to achieve the complex sixteen foot tower seen. The possibilities for further exploration are endless, maximizing the utility of standard amounts of material, instant on-site construction, and modular building. <a href="https://www.youtube.com/watch?v=93Wiev7npv4">Watch us build it!</a></p>
 						</section>
-						<section class="feature 6u$ 12u$(small)">
+						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/sign.jpg" alt="" />
 							<h3 class="title">Dining Room Sign</h3>
 							<p>I designed and built a new sign for the dining room in my fraternity house as a work week project. The letters were cut from MDF using a desktop CNC router, then bolted into the backboards that were placed on the wall between the studs. The holes in the front were filled in and the letters were painted matte black. I'm currently working on backlighting the sign as well, with soft incandescent colored LED strips to accent the rest of the lighting in the dining room.</p>
 						</section>
-						<section class="feature 6u 12u$(small)">
+						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/rushshirt.jpg" alt="" />
 							<h3 class="title">Rush Shirts</h3>
 							<p>I designed shirts for my fraternity's rush this year. Inspired by the Santa Cruz logo, this one shows our house in the background and the simple rush slogan in the center. Using Illustrator, I created the perspective view of the house and the font, bringing them together for the shirt.</p>
 						</section>
-						<section class="feature 6u$ 12u$(small)">
+						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/cnt.jpg" alt="" />
 							<h3 class="title">Carbon Forest</h3>
 							<p>In an architecture studio aimed at studying material science precedents I created this generative art project looking into the method of Carbon Nanotrube Array growth. Written in Processing, the script allows the user to deposit catalyst sites which will grow fibers of varying lengths and complexities based on proximity to neighbors and density of deposits.</p>
 						</section>
-						<section class="feature 6u 12u$(small)">
+						<section class="feature 6u$ 12u$(small)">
 							<img class="image fit" src="images/staggle.jpg" alt="" />
 							<h3 class="title">sTAGgle</h3>
 							<p>After some exploration, this project led us back to the playground that we rememebered from our younger days. When asked to design a new way of play, we hadn't even considered the simplest version of the concept, the blacktop game. We all remember the games from when we were kids, four-square, hopscotch, and others that only required some chalk to get started. Following along that track we came up with sTAGgle, a multi-person playground game that is combines the fundamentals of games such as hopscotch, Twister, and of course, TAG! <a href="https://vimeo.com/95931335">See it played!</a></p>
 						</section>
-						<section class="feature 6u$ 12u$(small)">
+						<section class="feature 6u 12u$(small)">
 							<img class="image fit" src="images/chevelle.jpg" alt="" />
 							<h3 class="title">1969 Chevelle</h3>
 							<p>I have been working with my dad over the past couple of years to complete the restoration of his and my first car. So far we have compelted a full engine rebuild and replacement, swapping the 307 originally found in the Malibu's with a 350 out of a 1968 Camaro. The build will also include some body work, refurbishing the interior, paint, and a lot of other finishing details.</p>
